--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Add remote 
         env:
           HF: ${{ secrets.HF }}
-        run: git remote add space https://ihgumilar:$HF@huggingface.co/spaces/ihgumilar/hugging-face-demo2
+        run: git remote set-url origin https://ihgumilar:$HF@huggingface.co/spaces/ihgumilar/hugging-face-demo2
       - name: Push to hub
         env:
           HF: ${{ secrets.HF }}
