--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,8 @@ jobs:
       - name: Add remote 
         env:
           HF: ${{ secrets.HF }}
-        run: git remote add space https://ihgumilar:$HF@huggingface.co/spaces/ihgumilar/hugging-face-demo2
+        run: git remote set-url origin https://ihgumilar:$HF@huggingface.co/spaces/ihgumilar/hugging-face-demo2
       - name: Push to hub
         env:
           HF: ${{ secrets.HF }}
-        run: git push --force space main https://ihgumilar:$HF@huggingface.co/spaces/ihgumilar/hugging-face-demo2 main
+        run: git push --force https://ihgumilar:$HF@huggingface.co/spaces/ihgumilar/hugging-face-demo2 main
