--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,4 +20,4 @@ jobs:
       - name: Push to hub
         env:
           HF: ${{ secrets.HF }}
-        run: git push --force space main https://ihgumilar:$HF@huggingface.co/spaces/ihgumilar/hugging-face-demo2
+        run: git push --force space main
