--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,5 @@
-name: Sync to Hugging Face hub
+name: Sync to Hugging Face space
+
 on:
   push:
     branches: [main]
@@ -7,17 +8,66 @@ on:
   workflow_dispatch:
 
 jobs:
-  sync-to-hub:
+  sync-to-space:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - name: Add remote 
+      - name: Push to space
         env:
-          HF: ${{ secrets.HF }}
-        run: git remote add space https://ihgumilar:$HF@huggingface.co/spaces/ihgumilar/hugging-face-demo2
-      - name: Push to hub
-        env:
-          HF: ${{ secrets.HF }}
-        run: git push --force space main
+          HF_TOKEN: ${{ secrets.HF_TOKEN }}
+          HF_USERNAME: ihgumilar  # m3hrdadfi
+          HF_SPACE: huggingface.co/spaces/ihgumilar/hugging-face-demo2  # huggingface.co/spaces/flax-community/chef-transformer
+          TARGET_BRANCH: main
+          GIT_USER_EMAIL: ihgumilar@gmail.com
+          GIT_USER_NAME: ihgumilar
+        run: |
+          echo "Cloning destination git repository"
+          git config --global user.email "$GIT_USER_EMAIL"
+          git config --global user.name "$GIT_USER_NAME"
+          CLONE_DIR=$(mktemp -d)
+          git clone "https://$HF_USERNAME:$HF_TOKEN@$HF_SPACE" "$CLONE_DIR"
+          ls -la "$CLONE_DIR"
+          echo "Copy contents to clone git repository"
+          cp -rf * "$CLONE_DIR"
+          COMMIT_MESSAGE=$(git log --oneline --format=%B -n 1 HEAD | head -n 1)
+          COMM=${COMM:=Sync with Github}
+          echo "commit message:"
+          echo "$COMMIT_MESSAGE"
+          cd "$CLONE_DIR"
+          echo "Files that will be pushed:"
+          ls -la
+          echo "git add:"
+          git add -A
+          echo "git status:"
+          git status
+          echo "git diff-index:"
+          git diff-index --quiet HEAD || git commit --message "$COMMIT_MESSAGE"
+          echo "git push origin:"
+          git push "https://$HF_USERNAME:$HF_TOKEN@$HF_SPACE" "$TARGET_BRANCH"
+
+
+# name: Sync to Hugging Face hub
+# on:
+#   push:
+#     branches: [main]
+
+#   # to run this workflow manually from the Actions tab
+#   workflow_dispatch:
+
+# jobs:
+#   sync-to-hub:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v2
+#         with:
+#           fetch-depth: 0
+#       - name: Add remote 
+#         env:
+#           HF: ${{ secrets.HF }}
+#         run: git remote add space https://ihgumilar:$HF@huggingface.co/spaces/ihgumilar/hugging-face-demo2
+#       - name: Push to hub
+#         env:
+#           HF: ${{ secrets.HF }}
+#         run: git push --force space main
